# mom6-cmake-build

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
FMS/: CMakeLists.txt
MOM6/: CMakeLists.txt
MOM6-SIS2-coupled/: CMakeLists.txt
